# AI-Planner

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  package.json
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_phase1_core.py  0002_phase2_notes.py  0003_subscriptions.py  0004_google_calendar.py  701605e22343_phase5_reminders.py  7ae2a4590a37_phase6_learning.py  f3fd90fbb1c1_phase5_user_telegram.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: __init__.py  analytics.py  google.py  health.py  learning.py  notes.py  notifications.py  projects.py  schedule.py  settings.py  subscriptions.py  tasks.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  enums.py  learning.py  notes.py  project.py  reminder.py  subscription.py  tag.py  task.py  user.py
apps/api/app/repositories/: __init__.py  projects.py  tasks.py
apps/api/app/schemas/: __init__.py  common.py  learning.py  notes.py  notification.py  project.py  schedule.py  subscription.py  tag.py  task.py
apps/api/app/services/: __init__.py  google_calendar.py  notes_ingest.py  notes_parser.py  prioritization.py  scheduler.py  subscriptions.py  telegram.py  users.py
apps/api/app/services/ai/: __init__.py  decomposition.py  eisenhower.py  extraction.py  provider.py
apps/api/scripts/: entrypoint.sh  seed.py  wait_for_db.py
apps/api/tests/: conftest.py  test_ai_extraction.py  test_health.py  test_learning_api.py  test_notes_api.py  test_notes_parser.py  test_prioritization.py  test_projects_api.py  test_reminders.py  test_schedule_api.py  test_scheduler.py  test_subscriptions_api.py  test_tasks_api.py
apps/worker/: .dockerignore  Dockerfile  pyproject.toml
apps/worker/app/: __init__.py  bot.py  config.py  main.py
apps/worker/app/jobs/: notes_sync.py  notifications_dispatch.py  subscriptions_check.py
docs/: GOOGLE_CALENDAR.md  PHASE_0.md  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  (+4 more)
(+36 files in other folders)
