[project]
name = "neuroplan-api"
version = "0.1.0"
description = "NeuroPlan FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.2",
  "sqlalchemy[asyncio]>=2.0.35",
  "alembic>=1.13.3",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.2.3",
  "redis>=5.0.8",
  "httpx>=0.27.2",
  "python-multipart>=0.0.12",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "structlog>=24.4.0",
  "orjson>=3.10.7",
  "pyyaml>=6.0.2",
  "watchfiles>=0.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
  "types-redis",
  "httpx>=0.27.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
