[project]
name = "neuroplan-worker"
version = "0.1.0"
description = "NeuroPlan background worker"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.10.4",
  "redis>=5.0.8",
  "sqlalchemy[asyncio]>=2.0.35",
  "asyncpg>=0.29.0",
  "pydantic-settings>=2.5.2",
  "structlog>=24.4.0",
  "httpx>=0.27.2",
  "aiogram>=3.4.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "ruff>=0.6.9", "mypy>=1.11.2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
